fix(pibss): make pibss-card fit better on mobile

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -432,4 +432,8 @@ pagefind-searchbox::part(input) {
     font-size: 1.5rem;
     text-align: center;
   }
+  .select {
+    font-size: 1rem;
+    text-align: center;
+  }
 }
